# libyshire-python

./: .editorconfig  .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
docs/: setup.cfg  setup.py
src/libyshire/: anbima.py  extensions.py
src/tests/: test_anbima.py
tests/unit/: test_anbima.py
