[metadata]
name = libyshire
version = 0.0.1
description = Pacote de funcionalidades utéis para a construção de software
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casje/libyshire-python
author = Claudio Alves Jr
maintainer = Claudio Alves Jr
license = MIT